Google oAuth now works in emulator.

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -42,6 +42,7 @@
 	<script src="bower_components/sockjs-client/dist/sockjs.js"></script>
 	<script src="bower_components/angular-sockjs/src/index.js"></script>
 	<script src="bower_components/hashmap/hashmap.js"></script>
+	<script src="bower_components/ionic-native/ionic.native.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
