--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -12,7 +12,6 @@
             <ion-nav-buttons side="right">
                 <button ng-if="isWsConnected" class="button button-icon button-clear ion-android-wifi"></button>
                 <button ng-if="!isWsConnected" class="button button-icon button-clear ion-alert" ng-click="connect()">
-                    Reconnect
                 </button>
             </ion-nav-buttons>
 
@@ -20,7 +19,7 @@
         <ion-nav-view name="menuContent"></ion-nav-view>
     </ion-side-menu-content>
 
-    <ion-side-menu side="left">
+    <ion-side-menu side="left" ng-if="user">
         <ion-header-bar class="bar-stable">
             <h1 class="title">Menu</h1>
         </ion-header-bar>
@@ -41,6 +40,10 @@
                 <ion-item nav-clear menu-close class="item-icon-left" href="#/app/dashboard">
                     <i class="icon ion-pie-graph"></i>
                     Dashboard
+                </ion-item>
+                <ion-item nav-clear menu-close class="item-icon-left" href="#" ng-click="logout()">
+                    <i class="icon ion-android-exit"></i>
+                    Logout
                 </ion-item>
             </ion-list>
         </ion-content>
