Various bug fix.

--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -19,7 +19,7 @@
         <ion-nav-view name="menuContent"></ion-nav-view>
     </ion-side-menu-content>
 
-    <ion-side-menu side="left" ng-if="user">
+    <ion-side-menu side="left">
         <ion-header-bar class="bar-stable">
             <h1 class="title">Menu</h1>
         </ion-header-bar>
@@ -41,10 +41,10 @@
                     <i class="icon ion-pie-graph"></i>
                     Dashboard
                 </ion-item>
-                <ion-item nav-clear menu-close class="item-icon-left" href="#" ng-click="logout()">
-                    <i class="icon ion-android-exit"></i>
-                    Logout
-                </ion-item>
+                <!--<ion-item nav-clear menu-close class="item-icon-left" href="#" ng-click="logout()">-->
+                    <!--<i class="icon ion-android-exit"></i>-->
+                    <!--Logout-->
+                <!--</ion-item>-->
             </ion-list>
         </ion-content>
     </ion-side-menu>
