Added functionality to log user access with included access browser.

--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus   enable-menu-with-back-views="true">
     <ion-side-menu-content
             edge-drag-threshold="true">
         <ion-nav-bar class="bar-stable">
@@ -41,10 +41,10 @@
                     <i class="icon ion-pie-graph"></i>
                     Dashboard
                 </ion-item>
-                <!--<ion-item nav-clear menu-close class="item-icon-left" href="#" ng-click="logout()">-->
-                    <!--<i class="icon ion-android-exit"></i>-->
-                    <!--Logout-->
-                <!--</ion-item>-->
+                <ion-item nav-clear menu-close class="item-icon-left" href="#" ng-click="logout()">
+                    <i class="icon ion-android-exit"></i>
+                    Logout
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
