--- a/src/main/webapp/app/scripts/login/login.html
+++ b/src/main/webapp/app/scripts/login/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login">
+<ion-view view-title="Login" hide-nav-bar="true">
     <ion-content>
         <div>
             <div class="padding">
