--- a/src/main/webapp/app/scripts/login/login.html
+++ b/src/main/webapp/app/scripts/login/login.html
@@ -1,11 +1,7 @@
-<ion-view view-title="Login" hide-nav-bar="true">
-    <ion-content>
-        <div>
-            <div class="padding">
+<ion-view view-title="Login" hide-nav-bar="true" class="login">
+    <ion-content style="margin-top: 50%;">
                 <button ng-click="login()" class="button button-block button-stable">
-                    Sign In
+                    <img src="../../images/btn_google_signin_dark_normal_web.png"/>
                 </button>
-            </div>
-        </div>
     </ion-content>
 </ion-view>
