Mobile application login page. Graphical improvements.

--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="item img-center">
             <a href="http://www.whirlpool.it" class="item item-icon-left">
-                <img src="../../images/whirlpool-logo.png"/>
+                <img ng-src="./images/xhdpi/whirlpool-logo.png"/>
             </a>
         </div>
         <div class="row">
@@ -32,18 +32,18 @@
                 </div>
             </ion-item>
         </ion-list>
-        <div class="row">
+        <div class="row" class="examle03FlexContainer">
             <ion-item nav-clear menu-close class="row card home item-text-wrap">
                 <div class="item item-text-wrap">
                     <h3> Project </h3>
                     <a href="http://beincpps.eu" class="item item-icon-left">
-                        <img src="../../images/beincpps-logo.png"/>
+                        <img src="./images/xhdpi/beincpps-logo.png"/>
                     </a>
                 </div>
                 <div class="item item-text-wrap">
                     <h3> Powered by </h3>
                     <a href="http://eng.it" class="item item-icon-left">
-                        <img src="../../images/eng-logo.png"/>
+                        <img src="./images/xhdpi/eng-logo.png"/>
                     </a>
                 </div>
             </ion-item>
