--- a/src/main/webapp/app/scripts/history/history.html
+++ b/src/main/webapp/app/scripts/history/history.html
@@ -1,9 +1,6 @@
 <ion-view view-title="History">
     <ion-content>
-
-
         <ion-item>
-
             <label class="item item-input item-select">
 
                 Filter by
@@ -14,30 +11,16 @@
                         ng-change="searchByStationBay(filter)">
                 </select>
             </label>
-
         </ion-item>
 
-
-        <!--<label class="item item-divider item-text">-->
-        <!--<input type="search" placeholder=" Station Name" ng-model="search.stationName">-->
-        <!--</label>-->
-        <!--<label class="item item-divider item-text">-->
-        <!--<input type="search" placeholder=" Bay Number" ng-model="search.bayNumber">-->
-        <!--</label>-->
-
-
         <ion-list class="list">
-
             <ion-item class="item item-divider item-text-wrap" ng-repeat="n in notifications|filter:search">
-                <ion-item>
-                    <button ion-button large class="icon ion-android-warning"
-                            ng-class={"red-button":n.ackType=='ack1',"yellow-button":n.ackType=='ack2'}>
-                    </button>
-                    Station: {{n.stationName}} Bay: {{n.bayNumber}} - {{n.description}}
+                <ion-item class="item item-icon-left">
+                    <i ng-class="{'icon ion-alert red' :n.ackType=='ack1',
+                            'icon ion-android-warning yellow':n.ackType=='ack2'}"></i>
+                    <h2 style="margin-left: 2%;">Station: {{n.stationName}} Bay: {{n.bayNumber}} - {{n.description}}</h2>
                 </ion-item>
             </ion-item>
-
-
         </ion-list>
         <ion-infinite-scroll
                 on-infinite="loadMore()">
