--- a/src/main/webapp/app/scripts/login/login.html
+++ b/src/main/webapp/app/scripts/login/login.html
@@ -1,7 +1,24 @@
-<ion-view view-title="Login" hide-nav-bar="true" class="login">
-    <ion-content style="margin-top: 50%;">
-                <button ng-click="login()" class="button button-block button-stable">
-                    <img src="../../images/btn_google_signin_dark_normal_web.png"/>
+<ion-view view-title="Login" hide-nav-bar="true">
+    <ion-content>
+        <div class="bar bar-header bar-light">
+            <h1 class="title">Login</h1>
+        </div>
+        <div class="item item-image">
+            <img src="./images/xhdpi/Whirlpool.jpg" style="max-width:40%;margin-top: 5%;">
+        </div>
+        <div class="card" style="text-align: center; padding-top: 10%;">
+            <div class="item item-text-wrap">
+                <h1>Welcome to ZeroHQTest!</h1>
+            </div>
+            <div class="item item-text-wrap">
+                <h2>Login with your Google Account</h2>
+            </div>
+            <div class="item item-text-wrap">
+                <button ng-click="login()" class="button button-block button-stable" style="background-color: white;">
+                    <img src="./images/xhdpi/btn_google_signin_dark_normal_web.png"/>
                 </button>
+            </div>
+        </div>
+
     </ion-content>
 </ion-view>
