--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -32,7 +32,7 @@
                 </div>
             </ion-item>
         </ion-list>
-        <div class="row" class="examle03FlexContainer">
+        <div class="row" ng-class="getBottomHeightPanelStyle()">
             <ion-item nav-clear menu-close class="row card home item-text-wrap">
                 <div class="item item-text-wrap">
                     <h3> Project </h3>
