--- a/src/main/webapp/app/scripts/inbox/inbox.html
+++ b/src/main/webapp/app/scripts/inbox/inbox.html
@@ -12,18 +12,18 @@
         <ion-list show-delete="shouldShowDelete" can-swipe="listCanSwipe">
             <ion-item class="item item-divider item-text-wrap" ng-repeat="(key,value) in notificationsMap track by key">
                 <ion-item href="#">
-                    <div class="row">
-                        <div class="col col-10">
-                            <i ng-class="{'button icon ion-alert red' :n.ackType=='ack1',
-                            'button icon ion-android-warning yellow':n.ackType=='ack2'}"></i>
-                        </div>
+                    <div class="item item-icon-left">
                         <div class="row">
-                            <div class="col90">
-                                <h2>Station: {{value.stationName}} Bay: {{value.bayNumber}} - {{value.description}}</h2>
-                                <br>
-                                Date: {{value.timestamp}}
-                            </div>
+                            <p ng-if = "value.timestamp" class="notification-style-date">Date: {{value.timestamp}}</p>
                         </div>
+                        <br/>
+                        <div class="row">
+                            <i ng-class="{'icon ion-alert red' :value.ackType=='ack1',
+                            'icon ion-android-warning yellow':value.ackType=='ack2'}"></i>
+                            <p class="notification-style-text">Station: {{value.stationName}} Bay: {{value.bayNumber}} -
+                                {{value.description}}</p>
+                        </div>
+                    </div>
                     <ion-option-button class="button-assertive icon ion-trash-a" ng-click="deleteAcknowledge(key)">
                     </ion-option-button>
                 </ion-item>
