--- a/src/main/webapp/app/scripts/dashboard/dashboard.html
+++ b/src/main/webapp/app/scripts/dashboard/dashboard.html
@@ -1,20 +1,23 @@
 <ion-view view-title="Dashboard">
     <ion-content>
-        <ion-item class="row header">
-            <div class="col  col-40"><b>Measure</b></div>
-            <div class="col col-13"><b>Value</b></div>
+        <ion-item id="dashboard-header" class="row header">
+            <div class="col col-34"><b>Measure</b></div>
+            <div class="col col-20"><b>Value</b></div>
             <div class="col col-13"><b>Limit Min</b></div>
             <div class="col col-13"><b>Limit Max</b></div>
         </ion-item>
-        <ion-list>
-            <on-item class="row" ng-repeat="elem in data">
-                <div class="col col-40">{{elem.measureId}}</div>
-                <div class="col  col-13" ng-class="controlValue(elem.value,elem.valueMin,elem.valueMax)">
-                    {{elem.value}}
+        <ion-list id="dashboard-table">
+            <ion-item class="row" ng-repeat="elem in data">
+                <div class="col col-34 col-dashboard-table">{{elem.measureId}}</div>
+                <div class="col col-20 col-dashboard-table">
+                    <div ng-if="elem.value" class="col-zero-value ">
+                        <i ng-class="getIconClass(elem.value, elem.valueMin, elem.valueMax)"></i>
+                        <p style="margin-left: 5px; font-size: 18px">{{elem.value}}</p>
+                    </div>
                 </div>
-                <div class="col  col-13">{{elem.valueMin}}</div>
-                <div class="col  col-13">{{elem.valueMax}}</div>
-            </on-item>
+                <div class="col col-13 col-dashboard-table">{{elem.valueMin}}</div>
+                <div class="col col-13 col-dashboard-table">{{elem.valueMax}}</div>
+            </ion-item>
         </ion-list>
     </ion-content>
 </ion-view>
