--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -1,7 +1,7 @@
-<ion-side-menus   enable-menu-with-back-views="true">
+<ion-side-menus enable-menu-with-back-views="true">
     <ion-side-menu-content
             edge-drag-threshold="true">
-        <ion-nav-bar class="bar-stable">
+        <ion-nav-bar class="bar-positive">
             <ion-nav-back-button>
             </ion-nav-back-button>
 
@@ -20,7 +20,7 @@
     </ion-side-menu-content>
 
     <ion-side-menu side="left">
-        <ion-header-bar class="bar-stable">
+        <ion-header-bar class="bar-positive">
             <h1 class="title">Menu</h1>
         </ion-header-bar>
         <ion-content>
@@ -48,4 +48,14 @@
             </ion-list>
         </ion-content>
     </ion-side-menu>
+    <div class="bar-zero bar bar-footer ">
+        <div class="row">
+            <div class="col col-33">
+                <img src="./images/xhdpi/beincpps-logo.png" style="max-width: 50%;"/>
+            </div>
+            <div class="col col-33 col-offset-33">
+                <img src="./images/xhdpi/eng-logo.png" style="max-width: 40%;"/>
+            </div>
+        </div>
+    </div>
 </ion-side-menus>
