--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -21,8 +21,8 @@
                                  style="border-style: none;">
                                 <div ng-if="bay.bayNumber">
                                     <i ng-class="getBackgroundColor(bay.stateInfo.type)"></i>
-                                    <b>Bay: {{bay.bayNumber}}</b>
-                                    <b>State: </b>{{bay.stateInfo.stateCode}}
+                                    <b>Box: {{bay.bayNumber}}</b>
+                                    <b>State: </b>{{bay.stateInfo.stateCode}} - {{bay.stateInfo.stateDescription}}
                                 </div>
                             </div>
                         </div>
