--- a/src/main/webapp/app/scripts/inbox/inbox.html
+++ b/src/main/webapp/app/scripts/inbox/inbox.html
@@ -15,9 +15,9 @@
                     <i ng-class="{'icon ion-android-warning orange' :value.ackType=='ack1',
                             'icon ion-android-warning yellow':value.ackType=='ack2',
                             'icon ion-alert red':value.ackType=='ack3'}"></i>
-                    <b>{{value.stationName}} Bay: {{value.bayNumber}}</b> -
+                    <b>{{value.stationName}} Box: {{value.bayNumber}}</b> -
                     {{value.description}}
-                    <span ng-if="value.timestamp" class="item-note"> <b>Date:</b>
+                    <span ng-if="value.timestamp" class="item-note item-note-zero"> <b>Date:</b>
                         {{value.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</span>
                 </div>
                 <ion-option-button ng-disabled="value.ackType==='ack3'"
